# dede

./: Dede.bnf  README.md  dede.cabal
examples/: set.kron
src/: Interpreter.hs  Main.hs  Parser.hs  Scanner.hs  Syntax.hs  Token.hs
