cabal-version:      3.0
name:               dede
version:            0.1.0.0
synopsis:           Computer Algebra System
-- description:
homepage:           https://github.com/isaac025/dede
license:            GPL-2.0-only
license-file:       LICENSE
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac@ihld.com
category:           Language
build-type:         Simple
extra-doc-files:    
    CHANGELOG.md
    README.md

executable dede
    ghc-options:      -Wall
    main-is:          Main.hs
    other-modules:
        Token
        Scanner
        Syntax
        Parser
        Interpreter
    default-extensions:
        OverloadedStrings
        RecordWildCards
        NamedFieldPuns
        GeneralizedNewtypeDeriving
        MultiWayIf
        TypeApplications
    build-depends:    base ^>=4.17.2.1
                    , text
                    , mtl
                    , containers
                    , cond
    hs-source-dirs:   src
    default-language: Haskell2010
